[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Images/Background.png" type="Texture" id=2]
[ext_resource path="res://Images/Enemy.png" type="Texture" id=3]
[ext_resource path="res://Battle.gd" type="Script" id=4]
[ext_resource path="res://Enemy.gd" type="Script" id=5]
[ext_resource path="res://Player.gd" type="Script" id=6]
[ext_resource path="res://Images/Player.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 1 )

[node name="Battle" type="Node"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 2 )

[node name="Enemy" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Enemy"]
position = Vector2( 1024.95, 313.358 )
texture = ExtResource( 3 )

[node name="HP" type="Label" parent="Enemy"]
margin_left = 871.713
margin_top = 12.8252
margin_right = 1178.71
margin_bottom = 125.825
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( 271.044, 309.018 )
texture = ExtResource( 7 )

[node name="HP" type="Label" parent="Player"]
margin_left = 115.173
margin_top = 3.84552
margin_right = 422.17
margin_bottom = 116.846
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Node2D" parent="."]

[node name="Attack_Button" type="Button" parent="UI"]
margin_left = 31.8331
margin_top = 560.384
margin_right = 276.833
margin_bottom = 656.384
custom_fonts/font = SubResource( 2 )
text = "Attack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Block_Button" type="Button" parent="UI"]
visible = false
margin_left = 31.8331
margin_top = 560.384
margin_right = 276.833
margin_bottom = 656.384
custom_fonts/font = SubResource( 2 )
text = "Block"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Evade_Button" type="Button" parent="UI"]
visible = false
margin_left = 306.833
margin_top = 560.384
margin_right = 551.833
margin_bottom = 656.384
custom_fonts/font = SubResource( 2 )
text = "Evade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Offensive_Phase_Label" type="Label" parent="UI"]
margin_left = 264.901
margin_top = 145.92
margin_right = 1200.9
margin_bottom = 258.92
custom_fonts/font = SubResource( 3 )
text = "Offensive Phase"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Defensive_Phase_Label" type="Label" parent="UI"]
visible = false
margin_left = 264.901
margin_top = 145.92
margin_right = 1200.9
margin_bottom = 258.92
custom_fonts/font = SubResource( 3 )
text = "Defensive Phase"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="ready" from="." to="." method="_on_Battle_ready"]
[connection signal="ready" from="Enemy" to="." method="_on_Enemy_ready"]
[connection signal="pressed" from="UI/Attack_Button" to="." method="_on_Attack_Button_pressed"]
[connection signal="pressed" from="UI/Block_Button" to="." method="_on_Block_Button_pressed"]
[connection signal="pressed" from="UI/Evade_Button" to="." method="_on_Evade_Button_pressed"]
